# AdvancedUNIX

midterm/: tools.c
midterm/envvar/: Makefile  conn.md  envvar_main  envvar_main.c  envvar_sol.c  input  readcode  readcode.c
midterm/simple_arithmetic/: simple_arithmetic  sol.py
midterm/welcome/: .welcome.c.swp  sol.py  welcome
unix_hw1/: CMakeLists.txt  Makefile  hw1  hw1.cpp
unix_hw2/: CMakeLists.txt  Makefile  README  README.md  main.c  sample  sample.c  sample2  sandbox  sandbox.c  sandbox2
unix_hw2/example/: Makefile  chdir.c  chdir_inject.c  execlp.c  execlp_inject.c  getuid.c  getuid_inject.c  opendir.c  opendir_inject.c  stat.c  stat_inject.c  test  test.c
unix_hw2/example/chdir/: chdir
unix_hw2/example/execlp/: execlp
unix_hw2/example/opendir/: opendir
unix_hw2/example/stat/: stat
unix_hw3/done/addsub1/: conn  flag  problem  sol
unix_hw3/done/addsub2/: conn  flag  problem
unix_hw3/done/bubble/: conn  flag  problem  sol
unix_hw3/done/clear17/: conn  flag  problem  sol
unix_hw3/done/dec2ascii/: conn  flag  problem
unix_hw3/done/dispbin/: conn  flag  problem  sol
unix_hw3/done/eval1/: conn  flag  problem  sol
unix_hw3/done/isolatebit/: conn  flag  problem  sol
unix_hw3/done/leax/: conn  flag  problem  sol
unix_hw3/done/loop15/: conn  flag  problem  sol
unix_hw3/done/math1/: conn  flag  problem  sol
unix_hw3/done/math2/: conn  flag  problem  sol
unix_hw3/done/math3/: conn  flag  problem  sol
unix_hw3/done/math4/: conn  flag  problem  sol
unix_hw3/done/math5/: conn  flag  problem  sol
unix_hw3/done/minicall/: conn  (+3 more)
(+83 files in other folders)
